Fix unclean menu wrapping on small screen

--- a/package/gargoyle/files/www/themes/Gargoyle/theme.css
+++ b/package/gargoyle/files/www/themes/Gargoyle/theme.css
@@ -50,6 +50,19 @@ legend {
 .red {
   background: #ae2323 !important;
 }
+@media screen and (max-width: 991px) {
+  .row-offcanvas {
+    position: relative;
+    left: 0;
+    -webkit-transition: left 0.25s ease-in-out;
+    -moz-transition: left 0.25s ease-in-out;
+    -o-transition: left 0.25s ease-in-out;
+    transition: left 0.25s ease-in-out;
+  }
+  .row-offcanvas.active {
+    left: 30%;
+  }
+}
 @media screen and (max-width: 767px) {
   .row-offcanvas {
     position: relative;
@@ -60,7 +73,7 @@ legend {
     transition: left 0.25s ease-in-out;
   }
   .row-offcanvas.active {
-    left: 80%;
+    left: 55%;
   }
 }
 #sidebar {
@@ -74,15 +87,17 @@ legend {
   background: -moz-repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Firefox 3.6 to 15 */
   background: repeating-linear-gradient(45deg, #8B9AF3, #93A6F2 0.5%); /* Standard syntax */
 }
-.sidebar-item.active>a, .sidebar-item>a:hover{
+.sidebar-item.active>a {
   background-color: #FFFFFF;
   color: #000000;
-  text-indent: 7.3%;
   line-height: 40px;
   display: block;
   float: left;
   text-decoration: underline;
   width: 100%;
+}
+.sidebar-item>a:hover {
+  padding-left: 7.3%;
 }
 li.sidebar-header {
   text-align: center;
@@ -111,14 +126,14 @@ li.sidebar-header span#garg_host {
   font-size: 10px;
 }
 li.sidebar-item {
-  text-indent: 7.3%;
   line-height: 40px;
 }
 li.sidebar-item a {
   border-bottom: 1px solid #b2b2b2;
 }
-.sidebar-item.active .sidebar-item{
-  text-indent: 13%;
+li.sidebar-item>a:hover {
+  padding-left: 13%;
+  text-decoration: underline;
 }
 .sidebar-item.active .sidebar-item.active {
   background: #ffffff;
@@ -130,12 +145,15 @@ li.sidebar-item a {
   text-decoration: none;
   width: 100%;
   font-weight: bold;
+  text-indent: 0;
+  padding-left: 13%;
 }
 .sidebar-item.active .sidebar-item.active:before {
   content: "> ";
 }
 .sidebar-item.active .sidebar-item a{
-  text-indent: 14%;
+  padding-left: 13%;
+  text-indent: 0;
   border: none;
 }
 ul.sidebar .sidebar-header a, ul.sidebar .sidebar-list a:hover {
@@ -185,6 +203,7 @@ ul.sidebar li a {
   font-size: 20px;
   font-weight: bold;
   padding: initial;
+  padding-left: 7.3%;
 }
 ul.sidebar .sidebar-header a {
   font-size: 18px;
@@ -215,7 +234,8 @@ ul.sidebar .sidebar-list a {
   line-height: 20px;
 }
 ul.sidebar .sidebar-list a:hover {
-  text-indent: 13%;
+  padding-left: 18%;
+  text-decoration: underline;
 }
 ul.sidebar .sidebar-list .menu-icon {
   float: right;
@@ -268,10 +288,19 @@ nav>li.active>a {
 .sidebar-footer div a:hover {
   text-decoration: none;
 }
+@media screen and (max-width: 991px) {
+  #sidebar {
+    left: -30%;
+    width: 30%;
+    position: absolute;
+    top: 0;
+    padding: 0px;
+  }
+}
 @media screen and (max-width: 767px) {
   #sidebar {
-    left: -80%;
-    width: 80%;
+    left: -55%;
+    width: 55%;
     position: absolute;
     top: 0;
     padding: 0px;
@@ -294,7 +323,7 @@ nav>li.active>a {
   padding-top: 20px;
   display: none;
 }
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 991px) {
   .navbar-brand {
     position: absolute;
     width: 100%;
@@ -306,88 +335,10 @@ nav>li.active>a {
     z-index: 1;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 992px) {
   .navbar-right {
     margin-right: -30px;
   }
-}
-.widget {
-  background: #ffffff;
-  border: 1px solid transparent;
-  border-radius: 2px;
-  -webkit-box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-  border-color: #e9e9e9;
-}
-.widget .widget-title {
-  color: #767676;
-  background-color: #f6f6f6;
-  padding: 10px 15px;
-  border-bottom: 1px solid #e9e9e9;
-  line-height: 30px;
-}
-.widget .widget-title i {
-  margin-right: 5px;
-}
-.widget .widget-title input {
-  width: 25%;
-}
-.widget .widget-body {
-  padding: 20px;
-}
-.widget .widget-body table thead {
-  background: #fafafa;
-}
-.widget .widget-body table thead * {
-  font-size: 14px !important;
-}
-.widget .widget-body table tbody * {
-  font-size: 13px !important;
-}
-.widget .widget-body .error {
-  color: #ff0000;
-}
-.widget .widget-body button {
-  margin-left: 5px;
-}
-.widget .widget-body div.alert {
-  margin-bottom: 10px;
-}
-.widget .widget-body.large {
-  height: 350px;
-  overflow-y: auto;
-}
-.widget .widget-body.medium {
-  height: 250px;
-  overflow-y: auto;
-}
-.widget .widget-body.small {
-  height: 150px;
-  overflow-y: auto;
-}
-.widget .widget-body.no-padding {
-  padding: 0;
-}
-.widget .widget-icon {
-  background: #30426a;
-  width: 65px;
-  height: 65px;
-  border-radius: 50%;
-  text-align: center;
-  vertical-align: middle;
-  margin-right: 15px;
-}
-.widget .widget-icon i {
-  line-height: 66px;
-  color: #ffffff;
-  font-size: 30px;
-}
-.widget .widget-content .title {
-  font-size: 28px;
-  display: block;
-}
-.widget .widget-body.no-padding .error, .widget .widget-body.no-padding .message {
-  padding: 20px;
 }
 #row-offcanvas > .container-fluid {
     padding-left: 0;
